smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/strings/text-block-missing-newline.smithy
// Parse error at line 4, column 24 near `)\n`: Invalid text block: text block must start with a new line (LF)
namespace smithy.example

@documentation("""Hi""")
string MyString
